work/57/4d12e0719d3ac4c3be95170fbddef1/.command.err
.command.run: line 284: TZ: unbound variable
  File "/app/compute_metrics.py", line 201
    gt_by_id = {p.stem.replace("gt_",").replace(".nii","): p for p in gt_all}
                                     ^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
